syntax = "proto3";

option go_package = "github.com/beam-cloud/beam/proto";

package container;

service ContainerService {
  rpc ExecuteCommand(CommandExecutionRequest)
      returns (stream CommandExecutionResponse) {}
  rpc CreateTunnel(CreateTunnelRequest) returns (CreateTunnelResponse) {}
}

message CommandExecutionRequest {
  string stub_id = 1;
  bytes command = 2;
}

message CommandExecutionResponse {
  string task_id = 1;
  string output = 2;
  bool done = 3;
  int32 exit_code = 4;
}

message CreateTunnelRequest {
  string container_id = 1;
  uint32 port = 2;
  int64 ttl = 3;
}

message CreateTunnelResponse {
  bool ok = 1;
  string public_url = 2;
}